--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
-    "jest": "~25.5.4",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3"
   },
