feat: add feature script to create rule and test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "generate-rule": "node script/generate-rule.js"
   },
   "keywords": [],
   "author": "",
