--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@typescript-eslint/parser": "^8.5.0",
+    "babel-jest": "^29.7.0",
     "compromise": "^14.14.0",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
     "jest": "^29.7.0",
