--- a/docs-docusaurus/package.json
+++ b/docs-docusaurus/package.json
@@ -20,8 +20,7 @@
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tsparticles": "^3.5.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.5.2",
