--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "husky": "^9.1.5",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.9",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "semantic-release": "^24.1.1"
   },
   "lint-staged": {
     "**/*.{js,ts}": [
