--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Semantic Release
-        run: npx semantic-release@22.0.0
+        run: npx semantic-release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
