--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: 'Fetch branches'
         run: git fetch origin
-      
+
       - name: 'Set Git user name and email'
         run: |
           git config --local user.email "github-actions@github.com"
@@ -47,7 +47,7 @@ jobs:
       - name: 'Copy Docusaurus build artifacts to gh-pages branch'
         run: |
           # Create a temp directory to store the build files
-          mkdir /tmp/temp-directory
+          mkdir -p /tmp/temp-directory
           # Enable dotglob to copy hidden files (like .gitignore)
           shopt -s dotglob
           # Copy the build from the docs-docusaurus/build folder
@@ -59,15 +59,19 @@ jobs:
           rm -rf *
           # Copy the build artifacts from the temp directory
           cp -r /tmp/temp-directory/* .
-          # Stage the changes and commit
-          git add . -f
-          git commit -m "Copy Docusaurus build artifacts to gh-pages branch"
+          # Check if there are any changes before committing
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git add . -f
+            git commit -m "chore: Copy Docusaurus build artifacts to gh-pages branch"
+          else
+            echo "No changes to commit"
+          fi
 
       - name: Push to gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git push origin gh-pages
+          git push origin gh-pages || echo "No changes to push"
 
       - name: 'Switch back to docs branch'
         run: |
