--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.8.1
+          node-version: 20
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -86,6 +86,9 @@ jobs:
     steps: 
       - name: Checkout code 
         uses: actions/checkout@v2
+         
+        with:
+          node-version: 20.x
 
       - name: Semantic Release
         run: npx semantic-release
