--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,12 +85,11 @@ jobs:
     needs: build
     steps: 
       - name: Checkout code 
-        uses: actions/checkout@v2
-         
+        uses: actions/checkout@v2   
         with:
           node-version: 20.x
 
       - name: Semantic Release
-        run: npx semantic-release
+        run: npx semantic-release@22
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
