--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,11 @@ on:
     - cron: '0 0 * * *'  # Runs every night at 12 am UTC
 
 jobs:
-  build:
-    name: 'Build Docusaurus Documentation'
+  deploy:
+    name: 'Deploy Docusaurus Documentation'
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      packages: read
     steps:
       - name: 'Checkout repository'
         uses: actions/checkout@v2
@@ -31,65 +30,9 @@ jobs:
           cd docs-docusaurus
           npm install
 
-      - name: 'Build Docusaurus site'
+      - name: 'Deploy Docusaurus site'
         run: |
           cd docs-docusaurus
-          npm run build
-
-      - name: 'Fetch branches'
-        run: git fetch origin
-
-      - name: 'Set Git user name and email'
-        run: |
-          git config --local user.email "github-actions@github.com"
-          git config --local user.name "GitHub Actions"
-
-      - name: 'Copy Docusaurus build artifacts to gh-pages branch'
-        run: |
-          # Create a temp directory to store the build files
-          mkdir -p /tmp/temp-directory
-          # Enable dotglob to copy hidden files (like .gitignore)
-          shopt -s dotglob
-          # Copy the build from the docs-docusaurus/build folder
-          cp -r docs-docusaurus/build/* /tmp/temp-directory/
-          shopt -u dotglob
-          # Switch to the gh-pages branch
-          git checkout gh-pages
-          # Remove all files from the gh-pages branch
-          rm -rf *
-          # Copy the build artifacts from the temp directory
-          cp -r /tmp/temp-directory/* .
-          # Check if there are any changes before committing
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git add . -f
-            git commit -m "chore: Copy Docusaurus build artifacts to gh-pages branch"
-          else
-            echo "No changes to commit"
-          fi
-
-      - name: Push to gh-pages
+          npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git push origin gh-pages || echo "No changes to push"
-
-      - name: 'Switch back to docs branch'
-        run: |
-          git checkout docs/docusaurus
-          
-  create-github-release:
-    name: Create Github release document
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    needs: build
-    steps: 
-      - name: Checkout code 
-        uses: actions/checkout@v2   
-        with:
-          node-version: 20.x
-
-      - name: Semantic Release
-        run: npx semantic-release@22
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
