--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,22 +33,20 @@ jobs:
         run: npm test
 
       - name: Publish package (semantic-release)
-        run: |
-             npm ci
-             npx semantic-release
+        run: npx semantic-release
         env:
-           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Verify .npmignore files
         run: |
           echo "Files included in npm package:"
           npm pack --dry-run
 
-  # Optional: Version bump and create a GitHub release
   release-notes:
-    needs: release
+    name: Generate Release Notes
     runs-on: ubuntu-latest
+    needs: release
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
