--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,10 @@ jobs:
       - name: Run tests
         run: npm test
 
+      - name: Check GitHub Token Permissions
+        run: |
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/user
+      
       - name: Publish package (semantic-release)
         run: npx semantic-release
         env:
