--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "node": ">=12.0.0"
   },
   "release": {
-    "repositoryUrl": "https://github.com/mindfiredigital/eslint-plugin-hub",
+    "repositoryUrl": "https://github.com/mindfiredigital/eslint-plugin-hub.git",
     "branches": [
       "master",
       {
