fix: update keywords and fix table of content in documentation

--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "keywords": [
     "eslint",
-    "eslintplugin",
     "eslint-plugin",
+    "eslintplugin",
+    "hub",
+    "react",
+    "angular",
+    "mern",
     "coding-standards",
     "pluginHub",
     "linter",
