feat: add keywords in package.json

--- a/package.json
+++ b/package.json
@@ -23,13 +23,28 @@
     "eslint-plugin",
     "eslintplugin",
     "hub",
-    "react",
-    "angular",
-    "mern",
+    "eslint-plugin-react",
+    "eslint-plugin-angular",
+    "eslint-plugin-typescript",
+    "eslint-plugin-js",
     "coding-standards",
     "pluginHub",
     "linter",
-    "lint"
+    "lint",
+    "react",
+    "angular",
+    "node",
+    "mern",
+    "typescript",
+    "javascript",
+    "code-quality",
+    "frontend",
+    "backend",
+    "custom-rules",
+    "camelcase",
+    "kebabcase",
+    "pascalcase",
+    "function-naming"
   ],
   "author": "mindfiredigital",
   "license": "MIT",
