feat: add the index.d.ts for types declaration in package.json

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "configs/",
     "lib/",
     "index.js",
+    "index.d.js",
     "package.json",
     "tsconfig.json",
     "babel.config.js",
