--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "configs/",
     "lib/",
     "index.js",
-    "index.d.js",
+    "index.d.ts",
     "package.json",
     "tsconfig.json",
     "babel.config.js",
