--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "main": "index.js",
   "types": "index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
