feat: add check-eslint-configuration script

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "main": "index.js",
   "types": "index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
     "prepare": "husky",
-    "generate-rule": "node script/generate-rule.js"
+    "generate-rule": "node script/generate-rule.js",
+    "postinstall": "node lib/utils/check-eslint-config.js"
   },
   "keywords": [
     "eslint",
