--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
-    "semantic-release": "^24.1.1"
+    "semantic-release": "^24.1.1",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "eslint": ">=8.56.0"
