--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "access": "public"
   },
   "main": "index.js",
+  "bin": {
+    "eslint-api-checker": "./bin/report-generation-cli.js"
+  },
   "module": "./index.mjs",
   "types": "index.d.ts",
   "sideEffects": false,
@@ -69,7 +72,9 @@
     "@babel/traverse": "^7.21.0",
     "@babel/types": "^7.21.0",
     "@typescript-eslint/typescript-estree": "^5.0.1",
-    "compromise": "^14.0.1"
+    "compromise": "^14.0.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "pdfkit": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
